fix row with flex wrap

--- a/css/style.css
+++ b/css/style.css
@@ -75,17 +75,23 @@ h5 {
     max-width: 1170px;
 }
 
-.m1 {
-    margin: 1rem;
+.p05 {
+    padding: 0.5rem;
+}
+
+.m-tb1{
+    margin: 1rem 0;
 }
 
 .row {
-    margin-left: -1rem;
-    margin-right: -1rem;
+    margin-left: -0.5rem;
+    margin-right: -0.5rem;
+    flex-wrap: wrap;
 }
 
 .col-4 {
     width: calc(100%/12 * 4);
+
 }
 
 /* #endsection common */
@@ -144,7 +150,7 @@ p.cat{
 /* #section main */
 
 main section{
-    margin: 3rem 0;
+    margin: 5rem 0;
 }
 
 .col-4 .imagin img {
@@ -169,9 +175,7 @@ main section{
 
 .spec {
     position: absolute;
-    width: 42%;
     bottom: 2.5rem;
-    justify-content: space-between;
 }
 
 .brand{
@@ -181,7 +185,8 @@ main section{
 .discount {
     color: var(--boo-light);
     background-color: var(--boo-discount);
-padding: 0.3rem;
+    padding: 0.3rem;
+    margin-right: 0.3rem;
 }
 
 .green {
